Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-68203

QtWebEngine fails to build with GCC 8.1

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.11.1
    • 5.11
    • WebEngine
    • None

      QtWebengine won't build with GCC 8.1.0. That same file builds OK when I use clang 6.0 or GCC 7.2.0.

      FAILED: obj/components/discardable_memory/public/interfaces/interfaces_shared_cpp_sources/discardable_shared_memory_manager.mojom-shared.o 
      /usr/bin/x86_64-pc-linux-gnu-g++ -MMD -MF obj/components/discardable_memory/public/interfaces/interfaces_shared_cpp_sources/discardable_shared_memory_manager.mojom-shared.o.d -DV8_DEPRECATION_WARNINGS -DUSE_UDEV -DUSE_AURA=1 -DUSE_GLIB=1 -DUSE_NSS_CERTS=1 -DUSE_X11=1 -DNO_TCMALLOC -DFULL_SAFE_BROWSING -DSAFE_BROWSING_CSD -DSAFE_BROWSING_DB_LOCAL -DCHROMIUM_BUILD -DFIELDTRIAL_TESTING_ENABLED -DTOOLKIT_QT -D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE -D_LARGEFILE64_SOURCE -D__STDC_CONSTANT_MACROS -D__STDC_FORMAT_MACROS -DNDEBUG -DNVALGRIND -DDYNAMIC_ANNOTATIONS_ENABLED=0 -DGLIB_VERSION_MAX_ALLOWED=GLIB_VERSION_2_32 -DGLIB_VERSION_MIN_REQUIRED=GLIB_VERSION_2_26 -Igen -I../../../../qtwebengine-5.11.9999/src/3rdparty/chromium -I/usr/include/glib-2.0 -I/usr/lib64/glib-2.0/include -Igen -fno-strict-aliasing --param=ssp-buffer-size=4 -fstack-protector -Wno-builtin-macro-redefined -D__DATE__= -D__TIME__= -D__TIMESTAMP__= -funwind-tables -fPIC -pipe -pthread -m64 -Wall -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -Wno-unused-local-typedefs -Wno-maybe-uninitialized -Wno-deprecated-declarations -fno-delete-null-pointer-checks -Wno-missing-field-initializers -Wno-unused-parameter -O2 -fno-ident -fdata-sections -ffunction-sections -fno-omit-frame-pointer -g0 -fvisibility=hidden -std=gnu++14 -fno-delete-null-pointer-checks -Wno-narrowing -fno-exceptions -fno-rtti -fvisibility-inlines-hidden -c gen/components/discardable_memory/public/interfaces/discardable_shared_memory_manager.mojom-shared.cc -o obj/components/discardable_memory/public/interfaces/interfaces_shared_cpp_sources/discardable_shared_memory_manager.mojom-shared.o
      In file included from ../../../../qtwebengine-5.11.9999/src/3rdparty/chromium/mojo/public/cpp/bindings/lib/handle_interface_serialization.h:11,
                       from ../../../../qtwebengine-5.11.9999/src/3rdparty/chromium/mojo/public/cpp/bindings/lib/serialization.h:18,
                       from gen/components/discardable_memory/public/interfaces/discardable_shared_memory_manager.mojom-shared.h:20,
                       from gen/components/discardable_memory/public/interfaces/discardable_shared_memory_manager.mojom-shared.cc:10:
      ../../../../qtwebengine-5.11.9999/src/3rdparty/chromium/mojo/public/cpp/bindings/associated_interface_ptr_info.h: In member function 'mojo::AssociatedInterfacePtrInfo<Interface>::operator bool() const':
      ../../../../qtwebengine-5.11.9999/src/3rdparty/chromium/mojo/public/cpp/bindings/associated_interface_ptr_info.h:48:43: error: cannot convert 'const mojo::ScopedInterfaceEndpointHandle' to 'bool' in return
         explicit operator bool() const { return handle_; }
                                                 ^~~~~~~
      In file included from ../../../../qtwebengine-5.11.9999/src/3rdparty/chromium/mojo/public/cpp/bindings/lib/handle_interface_serialization.h:12,
                       from ../../../../qtwebengine-5.11.9999/src/3rdparty/chromium/mojo/public/cpp/bindings/lib/serialization.h:18,
                       from gen/components/discardable_memory/public/interfaces/discardable_shared_memory_manager.mojom-shared.h:20,
                       from gen/components/discardable_memory/public/interfaces/discardable_shared_memory_manager.mojom-shared.cc:10:
      ../../../../qtwebengine-5.11.9999/src/3rdparty/chromium/mojo/public/cpp/bindings/associated_interface_request.h: In member function 'mojo::AssociatedInterfaceRequest<Interface>::operator bool() const':
      ../../../../qtwebengine-5.11.9999/src/3rdparty/chromium/mojo/public/cpp/bindings/associated_interface_request.h:53:43: error: cannot convert 'const mojo::ScopedInterfaceEndpointHandle' to 'bool' in return
         explicit operator bool() const { return handle_; }
                                                 ^~~~~~~
      In file included from ../../../../qtwebengine-5.11.9999/src/3rdparty/chromium/mojo/public/cpp/bindings/lib/handle_interface_serialization.h:15,
                       from ../../../../qtwebengine-5.11.9999/src/3rdparty/chromium/mojo/public/cpp/bindings/lib/serialization.h:18,
                       from gen/components/discardable_memory/public/interfaces/discardable_shared_memory_manager.mojom-shared.h:20,
                       from gen/components/discardable_memory/public/interfaces/discardable_shared_memory_manager.mojom-shared.cc:10:
      ../../../../qtwebengine-5.11.9999/src/3rdparty/chromium/mojo/public/cpp/bindings/interface_request.h: In member function 'mojo::InterfaceRequest<Interface>::operator bool() const':
      ../../../../qtwebengine-5.11.9999/src/3rdparty/chromium/mojo/public/cpp/bindings/interface_request.h:57:43: error: cannot convert 'const ScopedMessagePipeHandle' {aka 'const mojo::ScopedHandleBase<mojo::MessagePipeHandle>'} to 'bool' in return
         explicit operator bool() const { return handle_; }
                                                 ^~~~~~~
      

      I have no clue what that operator bool() is supposed to do; they have an is_valid() in there as well...

        For Gerrit Dashboard: QTBUG-68203
        # Subject Branch Project Status CR V

            juri.valdmann Jüri Valdmann (Inactive)
            jkt Jan Kundrát
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes