Fix build with GCC 8.1.0

Task-number: QTBUG-68203
Change-Id: I780d884d5e20ef04e902d7b449da4aa3f97d8d0b
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>