chromium/mojo/public/cpp/system/handle.h
@@ -121,7 +121,7 @@ class ScopedHandleBase {
 
   bool is_valid() const { return handle_.is_valid(); }
 
-  explicit operator bool() const { return handle_; }
+  explicit operator bool() const { return !!handle_; }
 
   bool operator==(const ScopedHandleBase& other) const {
     return handle_.value() == other.get().value();
